[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/ui-bits/Submenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/menus/saving/SaveSlot.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/menus/saving/SaveScreen.gd" type="Script" id=3]

[node name="SaveScreen" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="Content" parent="." index="2"]
custom_constants/separation = 25

[node name="Title" parent="Content" index="0"]
visible = false

[node name="Top Margin" type="Control" parent="Content" index="1"]
margin_right = 520.0
margin_bottom = 138.0
size_flags_vertical = 3

[node name="Back" type="Button" parent="Content" index="2"]
margin_top = 163.0
margin_right = 520.0
margin_bottom = 202.0
text = "Back"

[node name="HSeparator" type="HSeparator" parent="Content" index="3"]
margin_top = 227.0
margin_right = 520.0
margin_bottom = 231.0

[node name="Slots" type="VBoxContainer" parent="Content" index="4"]
margin_top = 256.0
margin_right = 520.0
margin_bottom = 567.0
size_flags_vertical = 2
custom_constants/separation = 25

[node name="Slot1" parent="Content/Slots" index="0" instance=ExtResource( 2 )]
anchor_right = 0.0
margin_right = 520.0
margin_bottom = 59.0

[node name="Slot2" parent="Content/Slots" index="1" instance=ExtResource( 2 )]
anchor_right = 0.0
margin_top = 84.0
margin_right = 520.0
margin_bottom = 143.0

[node name="Slot3" parent="Content/Slots" index="2" instance=ExtResource( 2 )]
anchor_right = 0.0
margin_top = 168.0
margin_right = 520.0
margin_bottom = 227.0

[node name="Slot4" parent="Content/Slots" index="3" instance=ExtResource( 2 )]
anchor_right = 0.0
margin_top = 252.0
margin_right = 520.0
margin_bottom = 311.0

[node name="Bottom Margin" type="Control" parent="Content" index="5"]
margin_top = 592.0
margin_right = 520.0
margin_bottom = 730.0
size_flags_vertical = 3
